<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="versus">VS</string>
    <string name="roster">Roster</string>
    <string name="about">About</string>
    <string name="city">City</string>
    <string name="year_founded">Year founded</string>
    <string name="arena">Arena</string>
    <string name="owner">Owner</string>
    <string name="general_manager">General manager</string>
    <string name="head_coach">Head coach</string>
    <string name="championships">Championships</string>
</resources>